Final Deliverables/NTA_webapp/Kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-tracker-application-flask

spec:
  replicas: 3
  selector:
    matchLabels:
      app: blog-in-flask
  template:
    metadata:
      labels:
        app: blog-in-flask

    spec:
      containers:
        - name: news-tracker-application
          image: jp.icr.io/news_tracker/ibm_news_tracker_application
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
