Final Deliverables/NTA_webapp/Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: news-tracker-application
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: flask-app
